# ElfWeave

./: .gitmodules  README.md  main.py  pyproject.toml
knowledge/agents/: specialized_agents.md
scripts/: setup_megakernel.sh
src/: __init__.py  harness.py  harness_logic.py  harness_planner.py  harness_ui.py
src/common/: __init__.py  config.py  kernel_bootstrap.py  kernel_bootstrap.sh  ollama.py  types.py  ui.py
src/elfweave.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/modules/: __init__.py  browser_agent.py  browser_logic.py  code_architect.py  code_architect_logic.py  code_architect_ui.py  fs_manager.py  fs_manager_logic.py  fs_manager_ui.py  knowledge_agent.py  knowledge_logic.py  monitor_agent.py  monitor_logic.py  weather.py  weather_logic.py  weather_ui.py
tests/: test_cli_smoke.py  test_inference_backend.py  test_kernel_bootstrap.py  test_ui_responsive.py
