[project]
name = "elfweave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama",
    "numpy",
    "ollama",
    "rich",
    "timezonefinder",
]

[project.optional-dependencies]
browser = [
    "browser-use",
    "langchain-ollama",
]
knowledge = [
    "faiss-cpu",
    "sentence-transformers",
]
megakernel = [
    "accelerate",
    "transformers",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }
torchaudio = { index = "pytorch-cu132" }
[tool.uv.extra-build-dependencies]
file = ["setuptools"]
